--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>乙兆營造 | Yi Zhao Construction | 專業建築工程</title>
+
+    <link rel="icon" href="logo.png" type="image/png">
     <meta name="description" content="乙兆營造專注於高品質住宅、廠房興建與公共工程。秉持日本職人精神，提供精準施工品質。">
-    
+
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&family=Noto+Sans+TC:wght@300;400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
