--- a/index.html
+++ b/index.html
@@ -13,6 +13,49 @@
         <link rel="icon" href="logo.png" type="image/png">
         <meta name="google-site-verification" content="googleeb499cdbf0292bb9" />
     
+        <script type="application/ld+json">
+            {
+              "@context": "https://schema.org",
+              "@type": "GeneralContractor",
+              "name": "乙兆營造有限公司",
+              "alternateName": "Yi Zhao Construction",
+              "url": "https://yizhao.com.tw",
+              "logo": "https://yizhao.com.tw/logo.png",
+              "image": "https://yizhao.com.tw/images/p1/p1-1.jpg",
+              "description": "乙兆營造專注於高品質住宅、廠房興建與公共工程。秉持日本職人精神，提供精準施工品質。",
+              "address": {
+                "@type": "PostalAddress",
+                "streetAddress": "祥順路一段433號",
+                "addressLocality": "北屯區",
+                "addressRegion": "台中市",
+                "postalCode": "406",
+                "addressCountry": "TW"
+              },
+              "geo": {
+                "@type": "GeoCoordinates",
+                "latitude": 24.168,
+                "longitude": 120.725
+              },
+              "telephone": "+886-4-2396-0066",
+              "openingHoursSpecification": [
+                {
+                  "@type": "OpeningHoursSpecification",
+                  "dayOfWeek": [
+                    "Monday",
+                    "Tuesday",
+                    "Wednesday",
+                    "Thursday",
+                    "Friday"
+                  ],
+                  "opens": "08:00",
+                  "closes": "17:30"
+                }
+              ],
+              "areaServed": ["Taichung", "Changhua", "Nantou"],
+              "priceRange": "$$$"
+            }
+            </script>
+
         <script src="https://cdn.tailwindcss.com"></script>
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&family=Noto+Sans+TC:wght@300;400;500;700&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
