--- a/index.html
+++ b/index.html
@@ -457,12 +457,102 @@
             },
             { 
                 id: 'project3',
-                title: '佳陞科技', 
-                type: 'RENOVATION',
+                title: '佳陞科技有限公司', 
+                type: 'FACTORY',
                 cover: 'images/p3/p3-1.jpg',
                 gallery: [
     'images/p3/p3-1.jpg',      // 照片
     'images/p3/p3-2.jpg',      // 照片
+]          
+            },
+            { 
+                id: 'project4',
+                title: '城宏玻璃有限公司 環中廠', 
+                type: 'FACTORY',
+                cover: 'images/p4/p4-1.jpg',
+                gallery: [
+    'images/p4/p4-1.jpg',      // 照片
+]          
+            },
+            { 
+                id: 'project5',
+                title: '均牧實業股份有限公司', 
+                type: 'FACTORY',
+                cover: 'images/p5/p5-1.jpg',
+                gallery: [
+    'images/p5/p5-1.jpg',      // 照片
+]          
+            },
+            { 
+                id: 'project6',
+                title: '世界健身中心 斗六店', 
+                type: 'FACTORY',
+                cover: 'images/p6/p6-1.jpg',
+                gallery: [
+    'images/p6/p6-1.jpg',      // 照片
+]          
+            },
+            { 
+                id: 'project7',
+                title: '世界健身中心 東山店', 
+                type: 'FACTORY',
+                cover: 'images/p7/p7-1.jpg',
+                gallery: [
+    'images/p7/p7-1.jpg',      // 照片
+]          
+            },
+            { 
+                id: 'project8',
+                title: '柯同鐵工廠有限公司', 
+                type: 'FACTORY',
+                cover: 'images/p8/p8-1.jpg',
+                gallery: [
+    'images/p8/p8-1.jpg',      // 照片
+]          
+            },
+            { 
+                id: 'project9',
+                title: '台灣航空電子股份有限公司 第三工廠', 
+                type: 'FACTORY',
+                cover: 'images/p9/p9-1.jpg',
+                gallery: [
+    'images/p9/p9-1.jpg',      // 照片
+]          
+            },
+            { 
+                id: 'project10',
+                title: '金永發企業有限公司', 
+                type: 'FACTORY',
+                cover: 'images/p10/p10-1.jpg',
+                gallery: [
+    'images/p10/p10-1.jpg',      // 照片
+]          
+            },
+            { 
+                id: 'project11',
+                title: '喜特麗廠辦興建工程', 
+                type: 'FACTORY',
+                cover: 'images/p11/p11-1.jpg',
+                gallery: [
+    'images/p11/p11-1.jpg',      // 照片
+]          
+            },
+            { 
+                id: 'project12',
+                title: '御成工業有限公司', 
+                type: 'FACTORY',
+                cover: 'images/p12/p12-1.jpg',
+                gallery: [
+    'images/p12/p12-1.jpg',      // 照片
+]          
+            },
+            { 
+                id: 'project13',
+                title: '上巨精機股份有限公司', 
+                type: 'FACTORY',
+                cover: 'images/p13/p13-1.jpg',
+                gallery: [
+    'images/p13/p13-1.jpg',      // 照片
 ]          
             },
         ];
